--- a/src/main/resources/extension.yml
+++ b/src/main/resources/extension.yml
@@ -1,6 +1,7 @@
-id: transfertool
+id: proxy
 name: TransferTool
 main: dev.onechris.extension.transfertool.TransferTool
 api: 2.4.1
 version: 1.1.0
 authors: [onebeastchris]
+
